[package]
name = "bevy_ui_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy" }
bevy = { git = "https://github.com/bevyengine/bevy", rev ="refs/pull/4716/head"} # <- this PR breaks the UI :c
